--- a/webpack_demo/3-9/package.json
+++ b/webpack_demo/3-9/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.4.6",
     "css-loader": "^2.1.0",
+    "cssnano": "^4.1.8",
     "file-loader": "^3.0.1",
+    "postcss": "^7.0.14",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0"
   }
